# OpenCV----Sentdex

./: 1.Loading_Reading_Writing.py  10.Template_Matching.py  11.Foreground_Extraction.py  12.Corner Detection.py  13.Feature_Matching.py  2.webcam_and_videos.py  3.Drawing_Writing_on_images.py  4.Image_Operations.py  5.Image_Arithmetic_and_Masks.py  6.Thresholding.py  7.Color Filtering.py  8.Morphological_Transformations.py  9.Gradients_and_Edge_Detection.py
day-1-basic-operations/: cropAndResize.py  datatypeConversion.py  readWriteDisplay.py  rotate.py
day-2-more-operations/: CMakeLists.txt  drawShape.cpp  drawShape.py  getAffine.cpp  getAffine.py  highguiMouse.cpp  highguiMouse.py  videoRead.cpp  videoRead.py  videoWrite.cpp  videoWrite.py  warpAffine.cpp  warpAffine.py
